// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon component sanity matches default snapshot 1`] = `
<svg
  class=""
  display="block"
  fill="currentcolor"
  height="24px"
  viewBox="0 0 24 24"
  width="24px"
>
  <path
    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
  />
</svg>
`;

exports[`Icon component sanity matches themed snapshot 1`] = `
.c0 {
  font-size: 1em;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  color: #3F3D4B;
}

<div
  class="c0"
>
  <svg
    class=""
    display="block"
    fill="currentcolor"
    height="24px"
    viewBox="0 0 24 24"
    width="24px"
  >
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
    />
  </svg>
</div>
`;
